# librespot-c

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.cmake.in
core/: Cargo.toml  core.rs  discovery.rs  lib.rs  oauth.rs  playback.rs  runtime.rs  utils.rs
core/src/: lib.rs  oauth.rs
core/src/oauth/: client_builder.rs  mod.rs
include/librespot/: core.h  discovery.h  oauth.h  playback.h  player.h  player.hpp
include/librespot/oauth/: scopes.h
include/librespot/playback/: player.h  player_rust.h
include/librespot/playback/audio_backend/: pulseaudio.h
include/librespot/playback/mixer/: softvol.h
lib/src/: lib.rs
rs/: Cargo.toml
src/librespot/: player.c  player.cpp  player_rust.h
src/librespot/playback/: player.c  player_rust.h
