[package]
name = "librespot"
version = "0.1.0"
edition = "2021"

[lib]
name = "respot_core"
path = "./lib.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.170"
librespot = { git = "https://github.com/librespot-org/librespot", features = ["pulseaudio-backend"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
